--- a/dbmigrations-sqlite.cabal
+++ b/dbmigrations-sqlite.cabal
@@ -1,30 +1,17 @@
 Name:                dbmigrations-sqlite
 Version:             2.0.0
-Synopsis:            The moo executable for SQLite to work with dbmigrations
+Synopsis:            The dbmigrations tool built for SQLite databases
 Description:         This package contains the executable to work with
                      the dbmigrations package when the database backend
                      is SQLite. See the package dbmigrations for details
                      about the dbmigrations project in general.
 
-                     This particular package only supports SQLite.
-                     There are other similar packages for other
-                     databases, for example for MySQL and SQLite.
-
                      To get started, see the 'README.md'
                      (https://github.com/jtdaugherty/dbmigrations/blob/master/README.md)
                      and 'MOO.TXT'
-                     (https://raw.githubusercontent.com/jtdaugherty/dbmigrations/master/MOO.TXT)
-                     files included in the dbmigrations package and to
-                     the usage output for the 'moo-sqlite' command.
-
-                     The executable in this package works exactly the
-                     same (as described in the dbmigrations package),
-                     with only two differences:
-                     * The executable this package provides is called
-                       'moo-sqlite' instead of 'moo'.
-                     * The executable in this package only supports SQLite.
-                       Consequently, you do not need to specify the
-                       database type via DBM_DATABASE_TYPE.
+                     (https://github.com/jtdaugherty/dbmigrations/blob/master/MOO.TXT)
+                     files included in the dbmigrations package and the
+                     usage output for the 'moo-sqlite' command.
 
 Category:            Database
 Author:              Jonathan Daugherty <cygnus@foobox.com>
